<resources>


    <string name="app_name">NewTripApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="addItemHint">New Trip</string>
    <string name="addItemContentDescription">New To Do Item</string>
    <string name="title_activity_other">OtherActivity</string>
    <string name="world">world</string>
    <string name="fragment">Fragment</string>
    <string name="trip_name">Please enter the trip name</string>
    <string name="pickStartDate">Please pick a start date</string>
    <string name="pickEndDate">Please pick an end date</string>
    <string name="startDate">Start date</string>
    <string name="endDate">End date</string>

    <string name="pickFromTime">Pick a start time: </string>
    <string name="pickFromTimeAm">AM or PM</string>
    <string name="pickToTime">Pick an end time: </string>
    <string name="eventText">Enter activity or event</string>


    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="priority">Priority:</string>
    <string name="content">content</string>
    <string name="duedate">DueDate</string>
    <string name="update">Update</string>
    <string name="setdate">SetDate</string>
    <string name="setcalendar">SetCalendar</string>
    <string name="addnewtask">Add New Task</string>
    <string name="setcalendarview">SetCalendarView</string>
    <string name="app_name_calendar">CalendarName</string>
    <string name="deleteTask">Delete Task</string>
    <string name="title_activity_maps">Map</string>

    <string name="addMap">Add a map</string>


</resources>
