<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/details_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:text="@string/trip_name"
        />
    <EditText
        android:id="@+id/myEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:hint="@string/addItemHint"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/from_text"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:padding="15dp"
            android:text="@string/pickStartDate"/>

        <Button
            android:id="@+id/from_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:text="@string/startDate"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/to_text"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:padding="15dp"
            android:text="@string/pickEndDate"/>

        <Button
            android:id="@+id/to_button"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:text="@string/endDate"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:background="@android:color/holo_green_light"
            android:text="@android:string/ok"
            />
        <Button android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="fill_parent"
            android:background="@android:color/holo_red_light"
            android:text="@android:string/cancel"
            />
    </LinearLayout>

</LinearLayout>
